--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         content="width=device-width, initial-scale=1, maximum-scale=1"
       />
       <meta name="google" content="notranslate" />
-      <title>Filestack PDF Viewer</title>
+      <title>PDF Viewer</title>
       <link rel="stylesheet" href="pdf-viewer/viewer.css" />
       <link
         rel="resource"
@@ -24,6 +24,9 @@
 
       <style type="text/css" media="all">
         .download {
+          display: none !important;
+        }
+        #print {
           display: none !important;
         }
       </style>
